# celestial

./: .codecov.yml  .gitignore  .gitmodules  .tarpaulin.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build-linux.sh
astro-coords/: Cargo.toml  README.md
astro-coords/src/: distance.rs  errors.rs  lib.rs  lighttime.rs  lunar.rs  solar.rs
astro-coords/src/aberration/: mod.rs
astro-coords/src/eop/: cache.rs  download.rs  interpolate.rs  manager.rs  mod.rs  parser.rs  record.rs
astro-coords/src/frames/: cirs.rs  ecliptic.rs  ecliptic_cartesian.rs  galactic.rs  gcrs.rs  heliographic.rs  icrs.rs  itrs.rs  selenographic.rs  tirs.rs  topocentric.rs
astro-coords/src/transforms/: cartesian.rs  mod.rs
astro-ephemeris/: Cargo.toml  README.md
astro-ephemeris/src/: earth.rs  moon.rs  sun.rs
astro-ephemeris/src/jpl/: spk.rs
astro-ephemeris/src/planets/: mod.rs
astro-ephemeris/src/planets/tests/: emb.rs  jupiter.rs  mars.rs  mercury.rs  neptune.rs  pluto.rs  saturn.rs  uranus.rs  venus.rs
astro-time/: Cargo.toml  README.md
astro-time/src/: constants.rs  julian.rs  lib.rs  parsing.rs
astro-time/src/scales/: gps.rs  mod.rs  tai.rs  tcb.rs  tcg.rs  tdb.rs  tt.rs  ut1.rs  utc.rs
astro-time/src/scales/conversions/: gps_tai.rs  mod.rs  tai_tt.rs  tcb_tdb.rs  tcg_tcb.rs  tt_tcg.rs  tt_tdb.rs  ut1_tai.rs  utc_tai.rs  utc_ut1.rs
astro-time/src/sidereal/: angle.rs  conversions.rs  gast.rs  gmst.rs  last.rs  lmst.rs  observatory.rs
astro-time/src/transforms/: rotation.rs
astro-time/src/transforms/nutation/: iau2000a.rs  iau2000b.rs  iau2006a.rs  mod.rs
astro-time/src/transforms/precession/: constants.rs  iau2000.rs  iau2006.rs  mod.rs
astro-wcs/: Cargo.toml
astro-wcs/src/: builder.rs  common.rs  coordinate.rs  error.rs  linear.rs
astro-wcs/src/distortion/: tpv.rs
astro-wcs/src/spherical/: conic.rs  cylindrical.rs  mod.rs  polyconic.rs  pseudocylindrical.rs  quadcube.rs  zenithal.rs
book/: book.toml
celestial-coords/: Cargo.toml  README.md
celestial-coords/examples/: coordinate_transforms.rs  eop_basics.rs  eop_update.rs  galactic_ecliptic.rs  solar_lunar.rs
celestial-coords/src/: distance.rs  errors.rs  lib.rs  lighttime.rs  lunar.rs  proper_motion.rs  solar.rs
celestial-coords/src/aberration/: mod.rs
celestial-coords/src/eop/: download.rs  embedded.rs  parser.rs  record.rs
celestial-coords/src/frames/: cirs.rs  ecliptic.rs  ecliptic_cartesian.rs  galactic.rs  gcrs.rs  heliographic.rs  icrs.rs  itrs.rs  selenographic.rs  tirs.rs  topocentric.rs
celestial-coords/src/transforms/: cartesian.rs  mod.rs
celestial-core/: Cargo.toml  README.md
celestial-core/src/: constants.rs  errors.rs  lib.rs  obliquity.rs  utils.rs
celestial-core/src/angle/: core.rs  format.rs  normalize.rs  ops.rs  parse.rs  serde_.rs
celestial-core/src/cio/: coordinates.rs  locator.rs  mod.rs  origins.rs
celestial-core/src/location/: core.rs  geodesy.rs
celestial-core/src/matrix/: rotation_matrix.rs  vector3.rs
celestial-core/src/nutation/: fundamental_args.rs  iau2000a.rs  iau2000b.rs  iau2006a.rs  mod.rs
celestial-core/src/precession/: iau2000.rs  iau2006.rs
celestial-ephemeris/: Cargo.toml  README.md
celestial-ephemeris/src/: earth.rs  moon.rs  sun.rs
celestial-ephemeris/src/jpl/: daf.rs  mod.rs  spk.rs
celestial-ephemeris/src/planets/: mod.rs
celestial-ephemeris/src/planets/tests/: emb.rs  jupiter.rs  mars.rs  mercury.rs  neptune.rs  pluto.rs  saturn.rs  uranus.rs  venus.rs
celestial-pointing/: Cargo.toml  README.md
celestial-pointing/src/: diurnal.rs  lib.rs  model.rs  observation.rs  parser.rs  prepare.rs  session.rs  solver.rs  test_support.rs  writer.rs
celestial-pointing/src/commands/: adjust.rs  apply.rs  clist.rs  correct.rs  fauto.rs  fit.rs  fittol.rs  fix.rs  gdec.rs  gdist.rs  gha.rs  ghyst.rs  gmap.rs  gscat.rs  help.rs  indat.rs  inmod.rs  lose.rs  lst.rs  mask.rs  mod.rs  mvet.rs  optimal.rs  outl.rs  outmod.rs  parallel.rs  predict.rs  reset.rs  show.rs  slist.rs  use_term.rs
celestial-pointing/src/commands/fauto/: bic.rs  candidates.rs  mod.rs  moves.rs  prune.rs  search.rs
celestial-pointing/src/plot/: residuals.rs  svg.rs  terminal.rs
celestial-pointing/src/solver/: design.rs  iterated.rs  linalg.rs  mod.rs  single_step.rs  stats.rs  validate.rs
celestial-pointing/src/terms/: altaz.rs  equatorial.rs  harmonic.rs  mod.rs
celestial-pointing/tests/: integration.rs
celestial-solver/: Cargo.toml  README.md
celestial-solver/src/: annotate.rs  lib.rs  output.rs  solve.rs
celestial-solver/src/detect/: background.rs  centroid.rs  components.rs  dedup.rs  mod.rs  pixel.rs  structure.rs
celestial-solver/src/fit_wcs/: cd_matrix.rs  display.rs  mod.rs  refine.rs  sip.rs  solution.rs
celestial-solver/src/match_field/: aggregate.rs  hash_index.rs  mod.rs  quad_stars.rs  verify.rs
celestial-solver/src/metadata/: error.rs  hint.rs  image_metadata.rs  mod.rs  plate_scale.rs  time.rs
celestial-solver/src/observation/: date_obs.rs  geodetic.rs  mod.rs
celestial-time/: Cargo.toml  README.md
celestial-time/src/: constants.rs  julian.rs  lib.rs  parsing.rs
celestial-time/src/scales/: gps.rs  mod.rs  tai.rs  tcb.rs  tcg.rs  tdb.rs  tt.rs  ut1.rs  utc.rs
celestial-time/src/scales/conversions/: gps_tai.rs  mod.rs  tai_tt.rs  tcb_tdb.rs  tcg_tcb.rs  tt_tcg.rs  tt_tdb.rs  ut1_tai.rs  utc_tai.rs  utc_ut1.rs
celestial-time/src/sidereal/: angle.rs  conversions.rs  gast.rs  gmst.rs  last.rs  lmst.rs  observatory.rs
celestial-time/src/transforms/: rotation.rs
celestial-time/src/transforms/nutation/: iau2000a.rs  iau2000b.rs  iau2006a.rs  mod.rs
celestial-wcs/: Cargo.toml  README.md
celestial-wcs/src/: builder.rs  common.rs  coordinate.rs  error.rs  header.rs  lib.rs  linear.rs
celestial-wcs/src/builder/: build.rs  keyword.rs  mod.rs  parse.rs  wcs.rs
celestial-wcs/src/distortion/: mod.rs  polynomial.rs  sip.rs  tnx.rs  tpv.rs
celestial-wcs/src/spherical/: conic.rs  cylindrical.rs  mod.rs  polyconic.rs  pseudocylindrical.rs  quadcube.rs  zenithal.rs
erfa-sys/: Cargo.toml  build.rs
erfa-sys/src/: lib.rs
(+126 files in other folders)
