[workspace]
resolver = "2"
members = [
    "celestial-catalog",
    "celestial-coords",
    "celestial-core",
    "celestial-ephemeris",
    "celestial-time",
    "celestial-images",
    "celestial-pointing",
    "celestial-wcs",
]

[workspace.package]
version = "0.1.1-alpha.2"
authors = ["@gaker"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gaker/celestial"

[workspace.dependencies]
# Internal crates
celestial-catalog = { version = "0.1.0-alpha.1", path = "celestial-catalog" }
celestial-core = { version = "0.1.1-alpha.2", path = "celestial-core" }
celestial-time = { version = "0.1.1-alpha.2", path = "celestial-time" }
celestial-coords = { version = "0.1.1-alpha.2", path = "celestial-coords" }
celestial-ephemeris = { version = "0.1.1-alpha.2", path = "celestial-ephemeris" }
celestial-images = { version = "0.1.1-alpha.2", path = "celestial-images" }
celestial-pointing = { version = "0.1.1-alpha.2", path = "celestial-pointing" }
celestial-wcs = { version = "0.1.1-alpha.2", path = "celestial-wcs" }

celestial-eop-data = { version = "0.1"}

# External dependencies
anyhow = "1.0"
approx = "0.5"
byteorder = "1.5"
cc = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
criterion = "0.5"
csv = "1.4"
flate2 = "1.0"
glob = "0.3"
indicatif = "0.18"
libm = "0.2"
lz4_flex = "0.11"
memmap2 = "0.9"
mockito = "1.0"
ndarray = "0.15"
num-traits = "0.2"
once_cell = "1.19"
png = "0.18"
proptest = "1.4"
quick-xml = "0.31"
rayon = "1.8"
regex = "1.11"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
tiff = "0.11"
tokio = { version = "1.0", features = ["rt", "macros", "net", "io-util", "time"] }
wide = "0.7"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
