[workspace]
resolver = "2"
members = [
    "celestial-catalog",
    "celestial-coords",
    "celestial-core",
    "celestial-ephemeris",
    "celestial-time",
    "celestial-images",
    "celestial-pointing",
    "celestial-solver",
    "celestial-wcs",
]

[workspace.package]
version = "0.1.1-alpha.2"
authors = ["@gaker"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gaker/celestial"

[workspace.dependencies]
# Internal crates
celestial-catalog = { path = "celestial-catalog" }
celestial-core = { path = "celestial-core" }
celestial-time = { path = "celestial-time" }
celestial-coords = { path = "celestial-coords" }
celestial-ephemeris = { path = "celestial-ephemeris" }
celestial-images = { path = "celestial-images" }
celestial-pointing = { path = "celestial-pointing" }
celestial-solver = { path = "celestial-solver" }
celestial-wcs = { path = "celestial-wcs" }

celestial-eop-data = { version = "0.1"}

# External dependencies
anyhow = "1.0"
approx = "0.5"
bitflags = "2.11"
byteorder = "1.5"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
criterion = "0.8"
csv = "1.4"
dirs = "6"
env_logger = "0.11"
flate2 = "1.0"
glob = "0.3"
indicatif = "0.18"
libm = "0.2"
log = "0.4"
lz4_flex = "0.13"
memmap2 = "0.9"
nalgebra = "0.34"
once_cell = "1.21"
plotters = { version = "0.3", default-features = false }
png = "0.18"
quick-xml = "0.40"
rayon = "1.12"
regex = "1.12"
reqwest = "0.13"
rustyline = "18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.27"
textplots = "0.8"
thiserror = "2.0"
tiff = "0.11"
tokio = { version = "1.0", features = ["rt", "macros", "net", "io-util", "time"] }
toml = "1.1"
wide = "1.4"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.metadata.release]
shared-version = true
consolidate-commits = true
pre-release-commit-message = "Release {{version}}"
tag-name = "v{{version}}"