[package]
name = "celestial-coords"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Astronomical coordinate transformations"
keywords = ["astronomy", "coordinates", "celestial", "astrometry"]
categories = ["science"]

[dependencies]
celestial-core.workspace = true
celestial-time.workspace = true
crc32fast.workspace = true
libm.workspace = true
reqwest = { workspace = true, optional = true, features = ["blocking"] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "celestial-core/serde", "celestial-time/serde"]
eop-download = ["serde", "dep:reqwest"]

[dev-dependencies]
criterion.workspace = true
mockito.workspace = true
serde_json.workspace = true
tokio.workspace = true

