[package]
name = "celestial-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libm.workspace = true
once_cell.workspace = true
regex.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = []
serde = ["dep:serde"]
# Internal feature for testing against ERFA reference implementation
erfa-tests = []

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
