[package]
name = "celestial-pointing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Telescope pointing model fitting and correction"
keywords = ["astronomy", "telescope", "pointing", "tpoint", "astrometry"]
categories = ["science"]

[dependencies]
celestial-core.workspace = true
celestial-coords.workspace = true
celestial-time.workspace = true
libm.workspace = true
thiserror.workspace = true
regex.workspace = true
rayon.workspace = true
nalgebra.workspace = true
bitflags.workspace = true
rustyline.workspace = true
dirs.workspace = true
plotters = { workspace = true, features = ["svg_backend"] }
textplots.workspace = true

[[bin]]
name = "pointing"
path = "src/bin/pointing.rs"

[dev-dependencies]
approx.workspace = true
