[package]
name = "celestial-time"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust astronomical time scales"
keywords = ["astronomy", "time", "ephemeris", "julian-date", "coordinates"]
categories = ["science", "date-and-time"]

[dependencies]
celestial-core.workspace = true
libm.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = []
serde = ["dep:serde", "celestial-core/serde"]

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
