[package]
name = "erfa-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Low-level FFI bindings to ERFA astronomical library"
build = "build.rs"

[build-dependencies]
cc.workspace = true

[dependencies]
# No runtime dependencies for raw FFI bindings

[dev-dependencies]
approx.workspace = true